[package]
name = "hickory"
version = "0.1.0"
edition = "2021"

[dependencies]
hickory-resolver = {version="0.25.0-alpha.4", features=["dns-over-native-tls"]} # "dns-over-https-rustls", "dns-over-rustls", "dns-over-native-tls", "dns-over-openssl"
reqwest = {version="0.12.12"}
once_cell = "1.20.2"
tokio = { version="1.42.0", features=["rt", "macros"] }